--- a/Chebao.BackAdmin/config/common.config
+++ b/Chebao.BackAdmin/config/common.config
@@ -18,5 +18,7 @@
 				/>
     </providers>
   </core>
-
+  <jobs minutes = "1" singleThread = "true">
+    <job name = "RefreshProductStockJob" type = "Chebao.TaskAndJob.Job.RefreshProductStockJob,Chebao.TaskAndJob" enabled = "true" enableShutDown = "false" singleThread = "false" minutes="10"/>
+  </jobs>
 </common>
