--- a/Chebao.BackAdmin/Chebao.BackAdmin.csproj
+++ b/Chebao.BackAdmin/Chebao.BackAdmin.csproj
@@ -110,12 +110,33 @@
     <Compile Include="cutimage.ashx.cs">
       <DependentUpon>cutimage.ashx</DependentUpon>
     </Compile>
+    <Compile Include="global\contact.aspx.cs">
+      <DependentUpon>contact.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="global\contact.aspx.designer.cs">
+      <DependentUpon>contact.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="global\corpintroduce.aspx.cs">
+      <DependentUpon>corpintroduce.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="global\corpintroduce.aspx.designer.cs">
+      <DependentUpon>corpintroduce.aspx</DependentUpon>
+    </Compile>
     <Compile Include="global\dealdata.aspx.cs">
       <DependentUpon>dealdata.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="global\dealdata.aspx.designer.cs">
       <DependentUpon>dealdata.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="global\sitesetting.aspx.cs">
+      <DependentUpon>sitesetting.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="global\sitesetting.aspx.designer.cs">
+      <DependentUpon>sitesetting.aspx</DependentUpon>
     </Compile>
     <Compile Include="global\sqlexecute.aspx.cs">
       <DependentUpon>sqlexecute.aspx</DependentUpon>
@@ -381,6 +402,13 @@
     <Compile Include="top.aspx.designer.cs">
       <DependentUpon>top.aspx</DependentUpon>
     </Compile>
+    <Compile Include="uc\header.ascx.cs">
+      <DependentUpon>header.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="uc\header.ascx.designer.cs">
+      <DependentUpon>header.ascx</DependentUpon>
+    </Compile>
     <Compile Include="user\adminedit.aspx.cs">
       <DependentUpon>adminedit.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -493,7 +521,10 @@
     <Content Include="css\font_1418875995_7687602.svg" />
     <Content Include="css\font_1421302883_443168.svg" />
     <Content Include="favicon.ico" />
+    <Content Include="global\contact.aspx" />
+    <Content Include="global\corpintroduce.aspx" />
     <Content Include="global\dealdata.aspx" />
+    <Content Include="global\sitesetting.aspx" />
     <Content Include="global\sqlexecute.aspx" />
     <Content Include="images\back.png" />
     <Content Include="images\footphonemail.jpg" />
@@ -533,6 +564,7 @@
     <Content Include="images\userh1.jpg" />
     <Content Include="images\waiting.gif" />
     <Content Include="js\jquery.magnifier.js" />
+    <Content Include="js\jquery.marquee.js" />
     <Content Include="message\main.aspx" />
     <Content Include="message\main_s.aspx" />
     <Content Include="message\messageboard.aspx" />
@@ -763,6 +795,7 @@
     <Content Include="product\productmg.aspx" />
     <Content Include="product\productview.aspx" />
     <Content Include="product\shoppingtrolleymg.aspx" />
+    <Content Include="uc\header.ascx" />
     <Content Include="user\userchangepw.aspx" />
     <Content Include="Web.config">
       <SubType>Designer</SubType>
