--- a/Chebao.Components/Chebao.Components.csproj
+++ b/Chebao.Components/Chebao.Components.csproj
@@ -77,6 +77,7 @@
     <Compile Include="Entity\ProvinceInfo.cs" />
     <Compile Include="Entity\ShoppingTrolleyInfo.cs" />
     <Compile Include="Entity\ShowUrl.cs" />
+    <Compile Include="Entity\SitesettingInfo.cs" />
     <Compile Include="Enumerations\ApplicationType.cs" />
     <Compile Include="Enumerations\OrderStatus.cs" />
     <Compile Include="Enumerations\ProductType.cs" />
@@ -95,6 +96,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\CommonDataProvider.cs" />
     <Compile Include="Query\EventLogQuery.cs" />
+    <Compile Include="Sitesettings.cs" />
     <Compile Include="Web\ChebaoContext.cs" />
   </ItemGroup>
   <ItemGroup>
