--- a/Chebao.Components/Chebao.Components.csproj
+++ b/Chebao.Components/Chebao.Components.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Entity\ShoppingTrolleyInfo.cs" />
     <Compile Include="Entity\ShowUrl.cs" />
     <Compile Include="Entity\SitesettingInfo.cs" />
+    <Compile Include="Entity\SyncFailedInfo.cs" />
     <Compile Include="Enumerations\ApplicationType.cs" />
     <Compile Include="Enumerations\OrderStatus.cs" />
     <Compile Include="Enumerations\ProductType.cs" />
