--- a/Chebao.BackAdmin/Chebao.BackAdmin.csproj
+++ b/Chebao.BackAdmin/Chebao.BackAdmin.csproj
@@ -604,6 +604,7 @@
     <Content Include="images\TB11ctfGVXXXXcmXFXXzEiYRXXX-271-453.png" />
     <Content Include="images\TB12iyqHXXXXXbsXpXXnzuJ_VXX-800-600.png" />
     <Content Include="images\TB1IY1mHXXXXXXFXVXXnzuJ_VXX-800-600.png" />
+    <Content Include="images\title_layer.gif" />
     <Content Include="images\userh1.gif" />
     <Content Include="images\userh1.jpg" />
     <Content Include="images\waiting.gif" />
