--- a/Chebao.BackAdmin/Chebao.BackAdmin.csproj
+++ b/Chebao.BackAdmin/Chebao.BackAdmin.csproj
@@ -124,12 +124,33 @@
     <Compile Include="global\corpintroduce.aspx.designer.cs">
       <DependentUpon>corpintroduce.aspx</DependentUpon>
     </Compile>
+    <Compile Include="global\costsdiscount.aspx.cs">
+      <DependentUpon>costsdiscount.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="global\costsdiscount.aspx.designer.cs">
+      <DependentUpon>costsdiscount.aspx</DependentUpon>
+    </Compile>
     <Compile Include="global\dealdata.aspx.cs">
       <DependentUpon>dealdata.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="global\dealdata.aspx.designer.cs">
       <DependentUpon>dealdata.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="global\discountstenciledit.aspx.cs">
+      <DependentUpon>discountstenciledit.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="global\discountstenciledit.aspx.designer.cs">
+      <DependentUpon>discountstenciledit.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="global\discountstencilmg.aspx.cs">
+      <DependentUpon>discountstencilmg.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="global\discountstencilmg.aspx.designer.cs">
+      <DependentUpon>discountstencilmg.aspx</DependentUpon>
     </Compile>
     <Compile Include="global\notice.aspx.cs">
       <DependentUpon>notice.aspx</DependentUpon>
@@ -193,6 +214,20 @@
     </Compile>
     <Compile Include="message\showclientmessage.aspx.designer.cs">
       <DependentUpon>showclientmessage.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="order\copyorder.aspx.cs">
+      <DependentUpon>copyorder.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="order\copyorder.aspx.designer.cs">
+      <DependentUpon>copyorder.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="order\copyordersuccess.aspx.cs">
+      <DependentUpon>copyordersuccess.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="order\copyordersuccess.aspx.designer.cs">
+      <DependentUpon>copyordersuccess.aspx</DependentUpon>
     </Compile>
     <Compile Include="order\main.aspx.cs">
       <DependentUpon>main.aspx</DependentUpon>
@@ -565,7 +600,10 @@
     <Content Include="favicon.ico" />
     <Content Include="global\contact.aspx" />
     <Content Include="global\corpintroduce.aspx" />
+    <Content Include="global\costsdiscount.aspx" />
     <Content Include="global\dealdata.aspx" />
+    <Content Include="global\discountstenciledit.aspx" />
+    <Content Include="global\discountstencilmg.aspx" />
     <Content Include="global\notice.aspx" />
     <Content Include="global\sitesetting.aspx" />
     <Content Include="global\sqlexecute.aspx" />
@@ -617,6 +655,8 @@
     <Content Include="message\messageboardmg.aspx" />
     <Content Include="message\messageboardview.aspx" />
     <Content Include="message\showclientmessage.aspx" />
+    <Content Include="order\copyorder.aspx" />
+    <Content Include="order\copyordersuccess.aspx" />
     <Content Include="order\main.aspx" />
     <Content Include="order\main_s.aspx" />
     <Content Include="order\ordermg.aspx" />
