--- a/Chebao.TaskAndJob/Chebao.TaskAndJob.csproj
+++ b/Chebao.TaskAndJob/Chebao.TaskAndJob.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Job\DeelOrderUpdateQueueJob.cs" />
     <Compile Include="Job\RefreshProductStockJob.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
