--- a/Chebao.Components/Chebao.Components.csproj
+++ b/Chebao.Components/Chebao.Components.csproj
@@ -83,6 +83,7 @@
     <Compile Include="Entity\SitesettingInfo.cs" />
     <Compile Include="Entity\SyncFailedInfo.cs" />
     <Compile Include="Entity\UserProductInfo.cs" />
+    <Compile Include="Entity\UserStockChangeInfo.cs" />
     <Compile Include="Enumerations\ApplicationType.cs" />
     <Compile Include="Enumerations\OrderStatus.cs" />
     <Compile Include="Enumerations\ProductType.cs" />
@@ -101,6 +102,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\CommonDataProvider.cs" />
     <Compile Include="Query\EventLogQuery.cs" />
+    <Compile Include="Query\UserStockChangeQuery.cs" />
     <Compile Include="Sitesettings.cs" />
     <Compile Include="Web\ChebaoContext.cs" />
   </ItemGroup>
