--- a/Chebao.BackAdmin/config/common.config
+++ b/Chebao.BackAdmin/config/common.config
@@ -20,7 +20,7 @@
   </core>
   <jobs minutes = "1" singleThread = "true">
     <job name = "RefreshProductStockJob" type = "Chebao.TaskAndJob.Job.RefreshProductStockJob,Chebao.TaskAndJob" enabled = "false" enableShutDown = "false" singleThread = "false" minutes="10"/>
-    <job name = "DeelOrderUpdateQueueJob" type = "Chebao.TaskAndJob.Job.DeelOrderUpdateQueueJob,Chebao.TaskAndJob" enabled = "false" enableShutDown = "false" singleThread = "false" minutes="1"/>
+    <job name = "DeelOrderUpdateQueueJob" type = "Chebao.TaskAndJob.Job.DeelOrderUpdateQueueJob,Chebao.TaskAndJob" enabled = "true" enableShutDown = "false" singleThread = "false" minutes="1"/>
     <job name = "OrderPastDueJob" type = "Chebao.TaskAndJob.Job.OrderPastDueJob,Chebao.TaskAndJob" enabled = "false" enableShutDown = "false" singleThread = "false" minutes="60"/>
   </jobs>
 </common>
